--- a/index.html
+++ b/index.html
@@ -1,8 +1,30 @@
 <!DOCTYPE html>
 <html lang="en-GB">
-    <head>
-        <meta charset="UTF-8"/>
-        <title>My Page Title</title>
-        <link rel="icon" type="image/x-icon" href="/images/favicon (1).ico" />
-    </head>
+
+<head>
+    <meta charset="UTF-8" />
+    <title>My Page Title</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+</head>
+
+<body>
+    <h1>AHHHHHHHHHHHHH</h1>
+    <p> texts from God, welcome</p> 
+    <div>
+        <div>
+            <img src="/images/catyelling.jpg" alt="a black and orange cat yelling" />
+        </div>
+        <div>
+            <img src="/images/ottereatng.jpg" alt="an otter eating" />
+        </div>
+        <div>
+            <img src="/images/seal_in_water.jpg" alt="a seal looking out of some water" />
+        </div>
+        <img src="/images/catyelling.jpg" alt="a black and orange cat yelling" />
+        <img src="/images/ottereatng.jpg" alt="an otter eating" />
+        <img src="/images/seal_in_water.jpg" alt="a seal looking out of some water" />
+    </div>
+
+</body>
+
 </html>
